electron-dock/mx-rig/deploy/k8s/internal/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mx-rig
  labels:
    app.kubernetes.io/part-of: mx-rig
